Fixed overflow for FlaggedRevisions' rating controls
Originally, we had unnecessary scroll bars, then we changed it to hidden.
As it turned out now, that cuts off the dropdown menus.

--- a/styles/themes/base.less
+++ b/styles/themes/base.less
@@ -367,7 +367,7 @@ a.new:visited {
 }
 #fr-rating-controls {
 	line-height:3.3em;
-	overflow:hidden !important;
+	overflow:visible !important;
 }
 #mw-fr-confirmreview {
 	white-space:normal !important;
